# SolTweet

./: Anchor.toml  README.md  package-lock.json  package.json
app/: next.config.js  package-lock.json  package.json  tsconfig.json
app/components/: Wallet.tsx
app/components/Avatar/: Avatar.tsx
app/components/LikeButton/: LikeButton.tsx
app/components/NavBar/: NavBar.tsx
app/components/PostForm/: PostForm.tsx
app/components/PostTimeLine/: PostTimeLine.tsx
app/components/ProfileLink/: ProfileLink.tsx
app/components/ThemeToggler/: ThemeToggler.tsx
app/components/TipAuthorButton/: TipAuthorButton.tsx
app/components/TipUserForm/: TipUserForm.tsx
app/hooks/: useBaseAccount.ts
app/lib/: createBaseAccount.ts  createKeyPair.js  getPosts.ts  getProgram.ts  getProvider.ts  keypair.json  likePost.ts  tipAuthor.ts  utils.ts
app/pages/: _app.tsx  index.tsx
app/pages/address/: [address].tsx
app/public/: idl.json
app/src/: App.js
app/styles/: globals.css
programs/contract_SolTweet/: Cargo.toml
programs/contract_SolTweet/src/: lib.rs  voorbeeld.rs
tests/: contract_SolTweet.ts
